--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,46 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'TT Commons Regular';
+  src: url('/fonts/TT Commons Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.background {
+  background-image: url('/images/FooterBG.png');
+  background-size: auto 100vh;
+  /* Cover the whole area */
+  background-position: bottom;
+  /* Center the image */
+  height: 100vh;
+  /* Full height */
+  width: 100%;
+  /* Full width */
+}
+
+.backgroundColor {
+  background: linear-gradient(180deg, #040914 0%, rgb(0 112 255 / 38%) 100%);
+}
+
+.bottomImage {
+  background-image: url('/images/BottomImage.png');
+  background-size: cover;
+  /* Cover the whole area */
+  background-position: center;
+  /* Center the image */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  width: 100%;
+  /* Full width */
+}
+
+.titleFont {
+  font-family: 'TT Commons Regular', sans-serif;
+  font-size: 400;
+}
